# chip8-emulator

./: .gitmodules  CMakeLists.txt  lv_conf.h  main_pc.c
chip8-core/: CMakeLists.txt  chip8.c  chip8.h
